--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -222,6 +222,14 @@
   venue = {{Boston}}
 }
 
+@book{bolstad2004introduction,
+  title = {Introduction to {{Bayesian Statistics}}},
+  author = {Bolstad, William M.},
+  date = {2004},
+  publisher = {{Wiley}},
+  location = {{New York}}
+}
+
 @software{bradbury2018jax,
   title = {{{JAX}}: Composable Transformations of {{Python}}+{{NumPy}} Programs},
   author = {Bradbury, James and Frostig, Roy and Hawkins, Peter and Johnson, Matthew James and Leary, Chris and Maclaurin, Dougal and Wanderman-Milne, Skye},
@@ -396,6 +404,14 @@
   annotation = {OCLC: 13269466},
   langid = {english},
   pagetotal = {843}
+}
+
+@article{efron2016computer,
+  title = {Computer {{Age Statistical Inference}}},
+  author = {Efron, Bradley and Hastie, Trevor},
+  date = {2016},
+  pages = {493},
+  langid = {english}
 }
 
 @article{elliott2018simple,
@@ -1610,7 +1626,7 @@
   langid = {english}
 }
 
-@online{winn2019modelbased,
+@book{winn2019modelbased,
   title = {Model-{{Based Machine Learning}}},
   author = {Winn, John and Bishop, Christopher M. and Diethe, Thomas and Guiver, John and Zaykov, Yordan},
   date = {2019},
