Fix height of tilde character

--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -385,7 +385,7 @@ opliterate=*
 {=}{{\opc{=}}}{1} {>}{{\opc{>}}}{1} {?}{{\opc{?}}}{1} {[}{{\opc{[}}}{1}
 {\\}{{\opc{\lstum@backslash}}}{1} {]}{{\opc{]}}}{1} {^}{{\opc{\^{}}}}{1}
 {\{}{{\opc{\{}}}{1} {|}{{\opc{|}}}{1} {\}}{{\opc{\}}}}{1}
-{~}{{\opc{\textasciitilde{}}}}{1}
+{~}{{\opc{\raisebox{0.5ex}{\texttildelow{}}}}}{1}
 %
 % julia's numbers
 %
